// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Large 1`] = `
<button
  className="sc-jSgvzq PfSkb"
  label="Press Me"
  onClick={[Function]}
  size={3}
>
  Press Me
</button>
`;

exports[`Storyshots Components/Button Long Label 1`] = `
<button
  className="sc-jSgvzq gmnDDu"
  label="Press MePress MPress MPress MPress MPress MPress MPress MPress M"
  onClick={[Function]}
  size={2}
>
  Press MePress MPress MPress MPress MPress MPress MPress MPress M
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="sc-jSgvzq fOrpxV"
  label="Press Me"
  onClick={[Function]}
  size={1}
>
  Press Me
</button>
`;

exports[`Storyshots Components/DateCircle Date Circle Story 1`] = `
<div
  data-testid="date-circle"
>
  <div
    className="sc-gKseQn kqeNlt"
  >
    <p>
      17
    </p>
    <p>
      DEC
    </p>
  </div>
</div>
`;
